// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> matches expected output 1`] = `
.c1 {
  box-sizing: border-box;
  padding: 10px;
}

.c0 {
  font-family: MuseoSans;
  font-weight: 900;
  text-align: left;
  color: #ef8612;
  font-size: 32px;
  line-height: 1.2;
}

.c0 sub {
  vertical-align: sub;
  font-size: smaller;
}

.c0 sup {
  vertical-align: super;
  font-size: smaller;
}

.c0 strong {
  font-weight: bold;
}

@media (min-width:32em) {
  .c0 {
    font-size: 36px;
    line-height: 1.2;
  }
}

@media (min-width:46em) {
  .c0 {
    font-size: 42px;
    line-height: 1.2;
  }
}

@media (min-width:76em) {
  .c0 {
    font-size: 57px;
    line-height: 1.2;
  }
}

<h1
  class="c0 c1"
  scale="1"
  title="testing"
>
  Hello, World!
</h1>
`;

exports[`<Text /> matches expected output 2`] = `
.c1 {
  box-sizing: border-box;
  padding: 10px;
}

.c0 {
  font-family: MuseoSans;
  font-weight: 400;
  text-align: left;
  color: #ef8612;
  font-size: 16px;
  line-height: 1.2;
}

.c0 sub {
  vertical-align: sub;
  font-size: smaller;
}

.c0 sup {
  vertical-align: super;
  font-size: smaller;
}

.c0 strong {
  font-weight: bold;
}

@media (min-width:32em) {
  .c0 {
    font-size: 16px;
    line-height: 1.2;
  }
}

@media (min-width:46em) {
  .c0 {
    font-size: 16px;
    line-height: 1.2;
  }
}

@media (min-width:76em) {
  .c0 {
    font-size: 16px;
    line-height: 1.2;
  }
}

<p
  class="c0 c1"
  title="testing"
>
  Hello, World!
</p>
`;

exports[`<Text /> matches expected output 3`] = `
.c1 {
  box-sizing: border-box;
  padding: 10px;
}

.c0 {
  font-family: MuseoSans;
  font-weight: 400;
  text-align: left;
  color: #ef8612;
  font-size: 12px;
  line-height: 1.6;
}

.c0 sub {
  vertical-align: sub;
  font-size: smaller;
}

.c0 sup {
  vertical-align: super;
  font-size: smaller;
}

.c0 strong {
  font-weight: bold;
}

@media (min-width:32em) {
  .c0 {
    font-size: 12px;
    line-height: 1.6;
  }
}

@media (min-width:46em) {
  .c0 {
    font-size: 12px;
    line-height: 1.6;
  }
}

@media (min-width:76em) {
  .c0 {
    font-size: 12px;
    line-height: 1.6;
  }
}

<small
  class="c0 c1"
  title="testing"
>
  Hello, World!
</small>
`;

exports[`<Text /> matches expected output 4`] = `
.c1 {
  box-sizing: border-box;
  padding: 10px;
}

.c0 {
  font-family: MuseoSans;
  font-weight: 400;
  text-align: left;
  color: #ef8612;
  font-size: 14px;
  line-height: 1.2;
}

.c0 sub {
  vertical-align: sub;
  font-size: smaller;
}

.c0 sup {
  vertical-align: super;
  font-size: smaller;
}

.c0 strong {
  font-weight: bold;
}

@media (min-width:32em) {
  .c0 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media (min-width:46em) {
  .c0 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media (min-width:76em) {
  .c0 {
    font-size: 14px;
    line-height: 1.2;
  }
}

<label
  class="c0 c1"
  title="testing"
>
  Hello, World!
</label>
`;
